<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="home">Home</string>
    <string name="device">Device</string>
    <string name="features">Features</string>
    <string name="performance">Performance</string>
    <string name="information">Information</string>
    <string name="extras">Extras</string>
    <string name="tools">Tools</string>
    <string name="editors">Editors</string>
    <string name="app_manager">App manager</string>
    <string name="wireless_file_manager">Wireless file manager</string>
    <string name="licenses">Licenses</string>
    <string name="privacy">Privacy</string>
    <string name="graphics">Graphics</string>
    <string name="display">Display</string>
    <string name="welcome">Welcome</string>
    <string name="welcome_message">To get started, swipe out the menu from the left or press the button at the very top left!\n\nIf a feature is not supported by your device, it gets automatically hidden!\nSupported features depend on the device you are using and the ROM and kernel you are running.\n\nIf you have no supported features, please try using a custom kernel!\n\nPlease note, that you need a rooted device to enjoy all features of %s!</string>
    <string name="app_warning_root">Please note that %s requires a rooted device to fully work!</string>
    <string name="app_warning_busybox">Please note that %s requires a BusyBox to fully work!</string>
    <string name="app_warning_busybox_note">BusyBox is required because not every system provides the same set of tools, which can lead to bugs and instability.\n\nBusyBox is uniform and works the same on every device.</string>
    <string name="start_wizard">Start wizard</string>
    <string name="get_busybox">Install BusyBox</string>
    <string name="more_information">More information</string>
    <string name="checking_requirements">Checking requirements…</string>
    <string name="please_wait">Please wait…</string>
    <string name="missing_requirements">Missing requirements</string>
    <string name="exit">Exit</string>
    <string name="close">Close</string>
    <string name="message_loading">Loading, please stand by…</string>
    <string name="action_press_again">Press once again to exit!</string>
    <string name="defaults_button">Reset to default</string>
    <string name="general">General</string>
    <string name="advanced">Advanced</string>
    <string name="others">Others</string>
    <string name="help">Help</string>
    <string name="more">More…</string>
    <string name="dialog_warning">Warning!</string>
    <string name="dialog_warning_apply">Are you sure that you want to apply your settings?</string>
    <string name="dialog_warning_su_version">Your installed superuser \"%s\" may not work properly. Using \"SuperSU\" is recommended!</string>
    <string name="dialog_action_never_show_again">Never show again</string>
    <string name="toast_settings_applied">Successfully applied!</string>
    <string name="no_tweaks_available">No tweaks available</string>
    <string name="no_tweaks_message">Sorry but your device does not have any supported features</string>
    <string name="gov_tweaks">Tweakable values: %s</string>
    <string name="no_gov_tweaks_message">Sorry but this governor has no tunable values</string>
    <string name="no_io_tweaks_message">Sorry but this I/O scheduler has no tunable values</string>
    <string name="time_in_state">Time in state</string>
    <string name="unused_cpu_states">Unused cpu states</string>
    <string name="total_state_time">Total state time</string>
    <string name="no_states_file_found">No states file found.</string>
    <string name="deep_sleep">\"Deep sleep\"</string>
    <string name="device_information">Device information</string>
    <string name="hotplug">Hotplug</string>
    <string name="mpdecision_summary">Should be deactivated if you use a custom hotplug replacement</string>
    <string name="thermal">Thermal driver</string>
    <string name="core_control">Core control</string>
    <string name="core_control_summary">Turns cpu cores off if temperature limit is reached</string>
    <string name="temp_limit">Temperature limit</string>
    <string name="core_temp_limit">Core temperature limit</string>
    <string name="core_max">Maximum cores online</string>
    <string name="core_min">Minimum cores online</string>
    <string name="intelli_thermal_enabled">Enable Intelli-Thermal</string>
    <string name="msm_thermal_enabled">Enable MSM-Thermal</string>
    <string name="thermal_warning">If deactivated without valid replacement, your device may overheat!</string>
    <string name="voltage">Voltage</string>
    <string name="msm_dcvs_summary">Use MSM DCVS for CPU/GPU frequency control</string>
    <string name="voltage_control">Voltage control</string>
    <string name="voltage_control_summary">Edit the voltages used per frequency</string>
    <string name="fast_charge">Fast charge</string>
    <string name="fast_charge_summary">Allows you to change the charging level</string>
    <string name="force_fast_charge">Force fast charge</string>
    <string name="fast_charge_0">0 - Disabled</string>
    <string name="fast_charge_1_new">1 - Use stock AC level on USB</string>
    <string name="fast_charge_1_old">1 - Enabled</string>
    <string name="fast_charge_2">2 - Use custom mA on AC and USB</string>
    <string name="failsafe">Fail safe</string>
    <string name="ac_level">AC level</string>
    <string name="ac_levels_valid">Valid AC levels</string>
    <string name="usb_level">USB level</string>
    <string name="usb_levels_valid">Valid USB levels</string>
    <string name="any_level_valid">CAUTION! Any level is valid!</string>
    <string name="powersaving">Powersaving</string>
    <string name="lcd_power_reduce">LCD power reduce</string>
    <string name="lcd_power_reduce_summary">Intelligently varies the backlight brightness of the display and helps maximizing battery life.</string>
    <string name="power_efficient_work">Power efficient workqueue</string>
    <string name="power_efficient_work_summary">Allows the work to be rescheduled on a core that is already awake.</string>
    <string name="powersaving_sched_mc_title">Power scheduler</string>
    <string name="powersaving_sched_mc_0">0 - Disabled</string>
    <string name="powersaving_sched_mc_1">1 - Balanced</string>
    <string name="powersaving_sched_mc_2">2 - Aggressive</string>
    <string name="intelli_plug_eco">Eco mode</string>
    <string name="cpusettings">CPU settings</string>
    <string name="current_speed">Current speed</string>
    <string name="cpu_freq_max">CPU maximum speed</string>
    <string name="cpu_freq_min">CPU minimum speed</string>
    <string name="cpu_governor">CPU governor</string>
    <string name="cpu_governor_tuning">CPU governor tuning</string>
    <string name="io">I/O scheduler</string>
    <string name="configure_format">Configure %s</string>
    <string name="sob">Apply automatically on boot</string>
    <string name="core">Core</string>
    <string name="core_offline">Offline</string>
    <string name="core_status">Core status</string>
    <string name="core_limits">Core limits</string>
    <string name="other_settings">Other settings</string>
    <string name="settings">Settings</string>
    <string name="refresh">Refresh</string>
    <string name="hide_status">Hide status</string>
    <string name="gpu_governor">GPU governor</string>
    <string name="gpusettings">GPU settings</string>
    <string name="gpu_freq_max">GPU maximum speed</string>
    <string name="gpu_freq_min">GPU minimum speed</string>
    <string name="gpu_3d_scaling">GPU 3D scaling</string>
    <string name="gpu_3d_scaling_summary">GPU 3D scaling intelligently regulates the gpu frequency</string>
    <string name="touchkey">Touch key</string>
    <string name="enable_keys_backlight">Enable keys backlight</string>
    <string name="enable_keys_backlight_summary">Light up touch keys when screen is on</string>
    <string name="enable_keys_notifications">Enable keys notifications</string>
    <string name="enable_keys_notifications_summary">Light up touch keys when screen is off and a notification is received</string>
    <string name="enable_keyboard_backlight">Enable keyboard backlight</string>
    <string name="enable_keyboard_backlight_summary">Light up keyboard backlight when screen is on</string>
    <string name="vibrator_strength">Vibration strength</string>
    <string name="vibrator_strength_summary">Adjust the strength of the vibration feedback</string>
    <string name="vibrator_warning">Values higher than %s are not recommended</string>
    <string name="test">Test</string>
    <string name="glove_mode">Glove mode</string>
    <string name="glove_mode_summary">Makes the touchscreen more sensitive, eg for using it with gloves.</string>
    <string name="screen_gamma">Screen gamma</string>
    <string name="screen_gamma_summary">Set screen gamma value</string>
    <string name="screen_color_temperature">Screen color temperature</string>
    <string name="screen_color_temperature_summary">Turn screen off and back on to activate</string>
    <string name="cold">Cold</string>
    <string name="cool">Cool</string>
    <string name="normal">Normal</string>
    <string name="warm">Warm</string>
    <string name="hot">Hot</string>
    <string name="logger_mode">Enable logcat</string>
    <string name="logger_mode_summary">Uncheck to remove any logs from logcat</string>
    <string name="version">Version</string>
    <string name="enable">Enable</string>
    <string name="disable">Disable</string>
    <string name="gestures">Gestures</string>
    <string name="knock_on">Knock on</string>
    <string name="knock_on_summary">Double tap on the screen to turn it on</string>
    <string name="sweep_to_wake">Sweep to wake</string>
    <string name="sweep_to_volume">Sweep to adjust volume</string>
    <string name="force_stop">Force stop</string>
    <string name="clear_cache">Clear cache</string>
    <string name="clear_data">Clear data</string>
    <string name="wfm_root">Browse in root mode</string>
    <string name="wfm_port">Web server port</string>
    <string name="authentication">Authentication</string>
    <string name="wfm_auth">Use authentication</string>
    <string name="wfm_auth_summary">Default username is \"root\" and password is \"toor\"</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="entropy">Entropy</string>
    <string name="kernel_features">Kernel features</string>
    <string name="governor">Governor</string>
    <string name="uninstall">Uninstall</string>
    <string name="sunlight_enhancement">Sunlight enhancement</string>
    <string name="sunlight_enhancement_summary">Enhance display brightness and readability under bright sunlight</string>
    <string name="color_enhancement">Color enhancement</string>
    <string name="sound_control">Sound control</string>
    <string name="display_color_calibration">Color calibration</string>
    <string name="display_color_calibration_summary">Calibrate on-screen colors</string>
    <string name="display_gamma_calibration">Gamma calibration</string>
    <string name="display_gamma_calibration_summary">Tweak gamma values</string>
    <string name="input_reset_on_suspend">Reset on suspend</string>
    <string name="input_reset_on_suspend_summary">Reset the input device when suspending to workaround degraded touch panel sensitivity</string>
    <string name="cpu_lock_freq">Lock frequencies</string>
    <string name="cpu_lock_freq_summary">Tries to prevent modifying frequencies\nThis may not always work on some devices!</string>
    <string name="cpu_lock_gov">Lock governors</string>
    <string name="cpu_lock_gov_summary">Tries to prevent modifying governors\nThis may not always work on some devices!</string>
    <string name="launch_app">Launch app</string>
</resources>