<?xml version="1.0" encoding="utf-8"?>
<!--  Copyright (C) 2013 - 2014 Alexander "Evisceration" Martinz

 This program is free software: you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
 the Free Software Foundation, either version 3 of the License, or
 (at your option) any later version.

 This program is distributed in the hope that it will be useful,
 but WITHOUT ANY WARRANTY; without even the implied warranty of
 MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 GNU General Public License for more details.

 You should have received a copy of the GNU General Public License
 along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:dc="http://schemas.android.com/apk/res-auto">

    <org.namelessrom.devicecontrol.preferences.CustomPreference
        android:icon="@drawable/ic_flash_on_black_24dp"
        android:key="fast_charge"
        android:summary="@string/fast_charge_summary"
        android:title="@string/fast_charge" />

    <org.namelessrom.devicecontrol.preferences.CustomPreference
        android:icon="@drawable/ic_equalizer_black_24dp"
        android:key="sound_control"
        android:title="@string/sound_control" />

    <org.namelessrom.devicecontrol.preferences.CustomPreferenceCategory
        android:key="input_gestures"
        android:title="@string/gestures">

        <org.namelessrom.devicecontrol.preferences.AwesomeTogglePreference
            android:defaultValue="false"
            android:key="knockon_gesture_enable"
            android:summary="@string/knock_on_summary"
            android:title="@string/knock_on"
            dc:category="device"
            dc:filePathList="@array/files_knock_on"
            dc:fileValue="@array/files_knock_on_values" />

        <org.namelessrom.devicecontrol.preferences.AwesomeTogglePreference
            android:defaultValue="false"
            android:key="sweep_to_wake"
            android:title="@string/sweep_to_wake"
            dc:category="device"
            dc:filePathList="@array/files_sweep_to_wake" />

        <org.namelessrom.devicecontrol.preferences.AwesomeTogglePreference
            android:defaultValue="false"
            android:key="sweep_to_volume"
            android:title="@string/sweep_to_volume"
            dc:category="device"
            dc:filePathList="@array/files_sweep_to_volume" />

    </org.namelessrom.devicecontrol.preferences.CustomPreferenceCategory>

    <org.namelessrom.devicecontrol.preferences.CustomPreferenceCategory
        android:key="touchkey"
        android:title="@string/touchkey">

        <!-- Touchkey backlight -->
        <org.namelessrom.devicecontrol.preferences.AwesomeTogglePreference
            android:defaultValue="true"
            android:key="touchkey_light"
            android:summary="@string/enable_keys_backlight_summary"
            android:title="@string/enable_keys_backlight"
            dc:category="device"
            dc:filePathList="@array/files_touchkey_light"
            dc:multifile="true"
            dc:valueChecked="255" />

        <org.namelessrom.devicecontrol.preferences.AwesomeTogglePreference
            android:defaultValue="true"
            android:key="touchkey_bln"
            android:summary="@string/enable_keys_notifications_summary"
            android:title="@string/enable_keys_notifications"
            dc:category="device"
            dc:filePath="@string/file_touchkey_bln" />

        <org.namelessrom.devicecontrol.preferences.AwesomeTogglePreference
            android:defaultValue="true"
            android:key="keyboard_light"
            android:summary="@string/enable_keyboard_backlight_summary"
            android:title="@string/enable_keyboard_backlight"
            dc:category="device"
            dc:filePath="@string/file_keyboard_light"
            dc:valueChecked="255" />

    </org.namelessrom.devicecontrol.preferences.CustomPreferenceCategory>

    <org.namelessrom.devicecontrol.preferences.CustomPreferenceCategory
        android:key="graphics"
        android:title="@string/display">

        <org.namelessrom.devicecontrol.preferences.AwesomeTogglePreference
            android:defaultValue="false"
            android:key="lcd_power_reduce"
            android:summary="@string/lcd_power_reduce_summary"
            android:title="@string/lcd_power_reduce"
            dc:category="device"
            dc:filePathList="@array/files_lcd_power_reduce" />

        <org.namelessrom.devicecontrol.preferences.AwesomeTogglePreference
            android:defaultValue="false"
            android:key="lcd_sunlight_enhancement"
            android:summary="@string/sunlight_enhancement_summary"
            android:title="@string/sunlight_enhancement"
            dc:category="device"
            dc:filePathList="@array/files_lcd_sunlight_enhancement" />

        <org.namelessrom.devicecontrol.preferences.AwesomeTogglePreference
            android:defaultValue="false"
            android:key="lcd_color_enhancement"
            android:title="@string/color_enhancement"
            dc:category="device"
            dc:filePathList="@array/files_lcd_color_enhancement" />

        <org.namelessrom.devicecontrol.preferences.hardware.DisplayColor
            android:key="display_color_calibration"
            android:dialogTitle="@string/display_color_calibration"
            android:title="@string/display_color_calibration"
            android:summary="@string/display_color_calibration_summary" />

        <org.namelessrom.devicecontrol.preferences.hardware.DisplayGamma
            android:key="display_gamma_calibration"
            android:dialogTitle="@string/display_gamma_calibration"
            android:title="@string/display_gamma_calibration"
            android:summary="@string/display_gamma_calibration_summary" />

        <org.namelessrom.devicecontrol.preferences.AwesomeListPreference
            android:defaultValue="2"
            android:entries="@array/panel_color_temp_entries"
            android:entryValues="@array/panel_color_temp_entries_values"
            android:key="panel_color_temperature"
            android:summary="@string/screen_color_temperature"
            android:title="@string/screen_color_temperature"
            dc:category="device"
            dc:filePathList="@array/files_panel_color_temp" />

    </org.namelessrom.devicecontrol.preferences.CustomPreferenceCategory>

    <org.namelessrom.devicecontrol.preferences.CustomPreferenceCategory
        android:key="extras"
        android:title="@string/extras">

        <org.namelessrom.devicecontrol.preferences.AwesomeTogglePreference
            android:defaultValue="false"
            android:key="logger_mode"
            android:summary="@string/logger_mode_summary"
            android:title="@string/logger_mode"
            dc:category="device"
            dc:filePath="@string/file_logger_mode" />

    </org.namelessrom.devicecontrol.preferences.CustomPreferenceCategory>

    <org.namelessrom.devicecontrol.preferences.CustomPreferenceCategory
        android:key="input_others"
        android:title="@string/others">

        <org.namelessrom.devicecontrol.preferences.hardware.VibratorIntensity
            android:dialogTitle="@string/vibrator_strength"
            android:key="vibrator_tuning"
            android:summary="@string/vibrator_strength_summary"
            android:title="@string/vibrator_strength" />

        <org.namelessrom.devicecontrol.preferences.AwesomeTogglePreference
            android:defaultValue="false"
            android:key="input_glove_mode_aw"
            android:summary="@string/glove_mode_summary"
            android:title="@string/glove_mode"
            dc:category="device"
            dc:filePathList="@array/files_glove_mode" />

        <org.namelessrom.devicecontrol.preferences.CustomTogglePreference
            android:key="input_glove_mode"
            android:summary="@string/glove_mode_summary"
            android:title="@string/glove_mode" />

        <org.namelessrom.devicecontrol.preferences.AwesomeTogglePreference
            android:defaultValue="false"
            android:key="input_reset_on_suspend"
            android:summary="@string/input_reset_on_suspend_summary"
            android:title="@string/input_reset_on_suspend"
            dc:category="device"
            dc:filePathList="@array/files_reset_on_suspend" />

    </org.namelessrom.devicecontrol.preferences.CustomPreferenceCategory>

</PreferenceScreen>
