<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/sheet_open"
        android:icon="@drawable/ic_launch_black_24dp"
        android:title="@string/launch_app" />
    <item
        android:id="@+id/sheet_force_stop"
        android:icon="@drawable/ic_block_black_24dp"
        android:title="@string/force_stop" />
    <item
        android:id="@+id/sheet_enable"
        android:icon="@drawable/ic_visibility_black_24dp"
        android:title="@string/enable" />
    <item
        android:id="@+id/sheet_disable"
        android:icon="@drawable/ic_visibility_off_black_24dp"
        android:title="@string/disable" />
    <item
        android:id="@+id/sheet_clear_cache"
        android:title="@string/clear_cache" />
    <item
        android:id="@+id/sheet_clear_data"
        android:title="@string/clear_data" />
    <item
        android:id="@+id/sheet_uninstall"
        android:icon="@drawable/ic_delete_black_24dp"
        android:title="@string/uninstall" />
</menu>
