<?xml version="1.0" encoding="utf-8"?>
<!--  Copyright (C) 2013 - 2014 Alexander "Evisceration" Martinz

 This program is free software: you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
 the Free Software Foundation, either version 3 of the License, or
 (at your option) any later version.

 This program is distributed in the hope that it will be useful,
 but WITHOUT ANY WARRANTY; without even the implied warranty of
 MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 GNU General Public License for more details.

 You should have received a copy of the GNU General Public License
 along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:dc="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:key="input_navbar"
        android:title="@string/navbar">

        <org.namelessrom.devicecontrol.preferences.CustomCheckBoxPreference
            android:key="navbar_force"
            android:summary="@string/force_navbar_summary"
            android:title="@string/force_navbar" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="input_gestures"
        android:title="@string/gestures">

        <org.namelessrom.devicecontrol.preferences.AwesomeCheckBoxPreference
            android:defaultValue="false"
            android:key="knockon_gesture_enable"
            android:summary="@string/knock_on_summary"
            android:title="@string/knock_on"
            dc:category="device"
            dc:filePathList="@array/files_knock_on" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="input_others"
        android:title="@string/others">

        <org.namelessrom.devicecontrol.preferences.CustomCheckBoxPreference
            android:key="input_glove_mode"
            android:summary="@string/glove_mode_summary"
            android:title="@string/glove_mode" />

        <org.namelessrom.devicecontrol.preferences.VibratorTuningPreference
            android:dialogTitle="@string/vibrator_strength"
            android:key="vibrator_tuning"
            android:summary="@string/vibrator_strength_summary"
            android:title="@string/vibrator_strength" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="touchkey"
        android:title="@string/touchkey">

        <!-- Touchkey backlight -->
        <org.namelessrom.devicecontrol.preferences.AwesomeCheckBoxPreference
            android:defaultValue="true"
            android:key="touchkey_light"
            android:summary="@string/enable_keys_backlight_summary"
            android:title="@string/enable_keys_backlight"
            dc:category="device"
            dc:filePathList="@array/files_touchkey_light"
            dc:multifile="true"
            dc:valueChecked="255" />

        <org.namelessrom.devicecontrol.preferences.AwesomeCheckBoxPreference
            android:defaultValue="true"
            android:key="touchkey_bln"
            android:summary="@string/enable_keys_notifications_summary"
            android:title="@string/enable_keys_notifications"
            dc:category="device"
            dc:filePath="@string/file_touchkey_bln" />

        <org.namelessrom.devicecontrol.preferences.AwesomeCheckBoxPreference
            android:defaultValue="true"
            android:key="keyboard_light"
            android:summary="@string/enable_keyboard_backlight_summary"
            android:title="@string/enable_keyboard_backlight"
            dc:category="device"
            dc:filePath="@string/file_keyboard_light"
            dc:valueChecked="255" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="graphics"
        android:title="@string/display">

        <org.namelessrom.devicecontrol.preferences.AwesomeCheckBoxPreference
            android:defaultValue="false"
            android:key="lcd_power_reduce"
            android:summary="@string/lcd_power_reduce_summary"
            android:title="@string/lcd_power_reduce"
            dc:category="device"
            dc:filePathList="@array/files_lcd_power_reduce" />

        <org.namelessrom.devicecontrol.preferences.CustomListPreference
            android:defaultValue="2"
            android:entries="@array/panel_color_temp_entries"
            android:entryValues="@array/panel_color_temp_entries_values"
            android:key="panel_color_temperature"
            android:summary="@string/screen_color_temperature"
            android:title="@string/screen_color_temperature" />

    </PreferenceCategory>

</PreferenceScreen>
