<?xml version="1.0" encoding="utf-8"?>
<!--  Copyright (C) 2013 - 2014 Alexander "Evisceration" Martinz

 This program is free software: you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
 the Free Software Foundation, either version 3 of the License, or
 (at your option) any later version.

 This program is distributed in the hope that it will be useful,
 but WITHOUT ANY WARRANTY; without even the implied warranty of
 MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 GNU General Public License for more details.

 You should have received a copy of the GNU General Public License
 along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:dc="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:key="general"
        android:title="@string/general">

        <org.namelessrom.devicecontrol.preferences.CustomListPreference
            android:key="io"
            android:title="@string/io" />

        <org.namelessrom.devicecontrol.preferences.CustomPreference
            android:key="entropy"
            android:title="@string/entropy" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="kernel_features"
        android:title="@string/kernel_features">

        <org.namelessrom.devicecontrol.preferences.CustomPreference
            android:key="ksm"
            android:title="@string/ksm" />

        <org.namelessrom.devicecontrol.preferences.CustomPreference
            android:key="hotplugging"
            android:title="@string/hotplugging"
            android:icon="@drawable/ic_general_hotplug" />

        <org.namelessrom.devicecontrol.preferences.CustomPreference
            android:key="thermal"
            android:title="@string/thermal"
            android:icon="@drawable/ic_general_heat" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="powersaving"
        android:title="@string/powersaving">

        <org.namelessrom.devicecontrol.widgets.preferences.AwesomeCheckBoxPreference
            android:key="power_efficient_work"
            android:title="@string/power_efficient_work"
            android:summary="@string/power_efficient_work_summary"
            dc:filePath="@string/file_power_efficient_workqueue"
            dc:category="extras" />

        <org.namelessrom.devicecontrol.preferences.CustomListPreference
            android:key="sched_mc_power_savings"
            android:title="@string/powersaving_sched_mc_title"
            android:entries="@array/mc_power_savings_entries"
            android:entryValues="@array/mc_power_savings_values" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="voltage"
        android:title="@string/voltage">

        <org.namelessrom.devicecontrol.widgets.preferences.AwesomeCheckBoxPreference
            android:key="msm_dcvs"
            android:title="@string/msm_dcvs"
            android:summary="@string/msm_dcvs_summary"
            android:defaultValue="false"
            dc:filePath="@string/file_msm_dcvs"
            dc:category="extras" />

        <org.namelessrom.devicecontrol.preferences.CustomPreference
            android:key="voltage_control"
            android:title="@string/voltage_control"
            android:summary="@string/voltage_control_summary"
            android:icon="@drawable/ic_general_voltage" />

    </PreferenceCategory>

</PreferenceScreen>

